--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongoose": "^5.0.15",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "react-router": "^4.2.0",
-    "redux": "^4.0.0"
+    "redux-thunk": "^2.2.0"
   }
 }
