--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "8.1.1",
@@ -18,14 +17,20 @@
   "author": "YJ",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/client": "^6.2.1",
+    "@sendgrid/helpers": "^6.2.1",
+    "@sendgrid/mail": "^6.2.1",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongoose": "^5.0.15",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "redux-thunk": "^2.2.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^5.8.0"
   }
 }
